--- a/src/bounded_contexts/space-ship-store-front/ui-adapter/ship.module.css
+++ b/src/bounded_contexts/space-ship-store-front/ui-adapter/ship.module.css
@@ -1,7 +1,3 @@
-.ship p {
-  color: grey;
-}
-
 .ship {
   display: flex;
   margin: 10px;
@@ -10,6 +6,7 @@
   padding: 3rem;
   cursor: pointer;
   box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.1);
+  color: #666;
 }
 
 .shipDetails {
